added GITHUB_TOKEN env variable to write-good.yml

--- a/.github/workflows/write-good.yml
+++ b/.github/workflows/write-good.yml
@@ -12,3 +12,5 @@ jobs:
 
       - name: Run Write-good
         uses: ../actions/write-good-action
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
