--- a/.github/workflows/write-good.yml
+++ b/.github/workflows/write-good.yml
@@ -1,6 +1,6 @@
-on: push
-
 name: Lint english prose
+
+on: push
 
 jobs:
   write-good:
@@ -11,6 +11,6 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run Write-good
-        uses: ../actions/write-good-action
+        uses: '../actions/write-good-action'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
