--- a/.github/workflows/write-good.yml
+++ b/.github/workflows/write-good.yml
@@ -11,6 +11,6 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run Write-good
-        uses: '../actions/write-good-action'
+        uses: ./.github/actions/write-good-action
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
